--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <p class="lead text-muted">Choose a pricing plan to suit you.</p>
             </div>
 
-            <div class="row my-5 align-items-center justify-content-center">
+            <div class="row my-5 align-items-center justify-content-center g-3">
                 <div class="col-8 col-lg-4 col-xl-3">
                     <div class="card border-0">
                         <div class="card-body text-center py-4">
@@ -97,13 +97,48 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-9 col-lg-4">
+                    <div class="card border-primary border-2">
+                        <div class="card-header text-center text-primary">Most Popular</div>
+                        <div class="card-body text-center py-5">
+                            <h4 class="card-title">Complete Edition</h4>
+                            <p class="lead card-subtitle">eBook download & all updates</p>
+                            <p class="display-4 my-4 text-primary fw-bold">$18.99</p>
+                            <p class="card-text mx-5 text-muted d-none-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <a href="#" class="btn btn-outline-primary btn-lg mt-3">Buy Now</a>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="col-8 col-lg-4 col-xl-3">
+                    <div class="card border-0">
+                        <div class="card-body text-center py-4">
+                          <h4 class="card-title">Ultimate Edition</h4>
+                          <p class="lead card-subtitle">download, updates & extras</p>
+                          <p class="display-5 my-4 text-primary fw-bold">$24.99</p>
+                          <p class="card-text mx-5 text-muted d-none-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                          <a href="#" class="btn btn-outline-primary btn-lg mt-3">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
             </div>
+            
         </div>
     </section>
 
-
-
     <!-- topics at a glance -->
+     <section id="topics">
+        <div class="container-md">
+          <div class="text-center">
+            <h2>Inside the Book...</h2>
+            <p class="lead text-muted">A quick glance at the topics you'll learn</p>
+          </div>
+          <div class="row my-5 g-5 justify-content-around align-items-center">
+            <div class="col-6 col-lg-4">
+                <img src="/assets/kindle.png" class="img-fluid" alt="ebook">
+            </div>
+          </div>    
+        </div>
+     </section>
 
 
 
