--- a/index.html
+++ b/index.html
@@ -136,6 +136,21 @@
             <div class="col-6 col-lg-4">
                 <img src="/assets/kindle.png" class="img-fluid" alt="ebook">
             </div>
+
+            <!--accordian-->
+            <div class="accordion" id="chapters">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading-1">
+                        <button class="accordion-button" type="button" data-bs-target="#chapter-1" data-bs-toggle="collapse" aria-expanded="true" aria-controls="chapter-1"> Chapter 1 - Your First Web Page</button>
+                    </h2>
+                    <div id="chapter-1" class="accordion-collapse collapse show" aria-labelledby="heading-1" data-bs-parent="#chapters">
+                        <div class="accordion-body">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis assumenda delectus sapiente quidem consequatur odit adipisci necessitatibus nemo aliquid minus modi tempore quibusdam quas vitae, animi ipsam nulla sunt alias.</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis assumenda delectus sapiente quidem consequatur odit adipisci necessitatibus nemo aliquid minus modi tempore quibusdam quas vitae, animi ipsam nulla sunt alias.</p>
+                          </div>
+                    </div>
+                </div>
+            </div>
           </div>    
         </div>
      </section>
