--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Book</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         section {
             padding: 60px, 0;
@@ -18,6 +19,7 @@
         <div class="container-xxl">
             <a href="#intro" class="navbar-brand">
               <span class="fw-bold text-secondary">
+                <i class="bi bi-book-half"></i>
                 Net Ninja Pro - the Book
               </span>
             </a>
@@ -212,7 +214,7 @@
     <section id="reviews" class="bg-light">
         <div class="container-lg">
           <div class="text-center">
-            <h2>Book Reviews</h2>
+            <h2><i class="bi bi-stars"></i>Book Reviews</h2>
             <p class="lead">What my students have said about the book...</p>
           </div>
     
@@ -220,26 +222,61 @@
             <div class="col-lg-8">
               <div class="list-group">
                 <div class="list-group-item py-3">
+                  <div class="pb-2">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                  </div>  
                   <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
                   <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
                   <small>Review by Mario</small>
                 </div>
                 <div class="list-group-item py-3">
+                  <div class="pb-2">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                  </div>  
                   <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
                   <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
                   <small>Review by Mario</small>
                 </div>
                 <div class="list-group-item py-3">
+                    <div class="pb-2">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
                   <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
                   <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
                   <small>Review by Mario</small>
                 </div>
                 <div class="list-group-item py-3">
+                    <div class="pb-2">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
                   <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
                   <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
                   <small>Review by Mario</small>
                 </div>
                 <div class="list-group-item py-3">
+                    <div class="pb-2">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                    </div>
                   <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
                   <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
                   <small>Review by Mario</small>
@@ -250,7 +287,10 @@
           </div>
         </div>
       </section>
+      <!-- contact form -->
 
+
+      <!-- get updates / modal trigger-->
 
 
 
